# SchoolTools

./: API.h  AppLog.cpp  AppLog.h  CMakeLists.txt  CMakeUserPresets.json  README.md  SchoolTools.pro  TodayCurriculum.pro  animationlabelup.cpp  anishow_label.cpp  anishow_label.h  clicklabel.cpp  clicklabel.h  daytimerwidget.cpp  daytimerwidget.h  daytimerwidget.ui  getstartwidget.cpp  getstartwidget.h  getstartwidget.ui  icon.rc  mOviHO.json  main.cpp  maintablewidget.cpp  maintablewidget.h  maintablewidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.qss  qcustomtimer.cpp  qcustomtimer.h  res.qrc  resources.qrc  rolling_label.cpp  rolling_label.h  setup.iss  tableeditwidget.cpp  tableeditwidget.h  tableeditwidget.ui  tablewidget_updown.cpp  (+10 more)
cpp/: AppLog.cpp  AppendixTableManager.cpp  NetworkRequests.cpp  animationlabelup.cpp  clicklabel.cpp  daytimerwidget.cpp  getstartwidget.cpp  maintablewidget.cpp  mainwindow.cpp  rolling_label.cpp  syncingdialog.cpp  tableeditwidget.cpp  toolbox.cpp  twtodowidget.cpp  yiyandialog.cpp
headers/: API.h  AppLog.h  AppendixTableManager.h  NetworkRequests.h  animationlabelup.h  clicklabel.h  daytimerwidget.h  getstartwidget.h  maintablewidget.h  mainwindow.h  syncingdialog.h  tableeditwidget.h  toolbox.h
lang/: lang_cn.qm  lang_cn.ts  lang_en.qm  lang_en.ts
ui/: AppendixTableManager.ui  daytimerwidget.ui  getstartwidget.ui  maintablewidget - 副本.ui  maintablewidget.ui  mainwindow.ui  syncingdialog.ui  tableeditwidget.ui  yiyandialog.ui
